--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -463,14 +463,12 @@
         Synchroniser uniquement les tampons ouverts</string>
     <string name="pref__connection__synchronization__only_sync_open_buffers_summary">
         Peut réduire significativement le trafic réseau et l’utilisation de la batterie,
-        mais le chargement des messages notables ne se fera que toutes les 5 minutes.
-        Nécessite WeeChat 1.1 ou ultérieur.</string>
+        mais le chargement des messages notables ne se fera que toutes les 5 minutes</string>
 
     <string name="pref__connection__synchronization__sync_read_status">
         Synchroniser l’état lu des tampons</string>
     <string name="pref__connection__synchronization__sync_read_status_summary">
-        Marque les tampons comme lus dans WeeChat quand vous lisez dans cette app.
-        Nécessite WeeChat 1.0 ou ultérieur.</string>
+        Marque les tampons comme lus dans WeeChat quand vous lisez dans cette app</string>
 
     <!-- ############################## connection: ping settings ############################## -->
 
